SERVER-62896 Coverity analysis defect 121382: Parse warning